fixed bg image issue

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
 
         <!-- banner section -->
-        <div class="banner max-w-[1170px] bg-[url(./Images/banner.png)] mx-auto rounded-lg">
+        <div class="banner max-w-[1170px] bg-[url(./images/banner.png)] mx-auto rounded-lg">
             <div class="banner-content max-w-[692px] mx-auto pt-24 pb-24 text-center mb-4">
                 <h3 class="text-7xl text-white h-4/5 mb-6 eb-garamond-font">We Provide Effective Legal Solutions</h3>
                 <p class="mb-8 text-center poppins-font leading-6 text-[#E7E7E7]">There are many variations of passages
@@ -116,7 +116,7 @@
             </div>
             <!-- Client Banner -->
             <div
-                class="bg-[url(./Images/banner.png)] bg-[#111111CC] px-32 py-24 flex flex-col justify-center items-center rounded-l-lg">
+                class="bg-[url(./images/banner.png)] bg-[#111111CC] px-32 py-24 flex flex-col justify-center items-center rounded-l-lg">
                 <img src="./images/Ellipse 1.svg" alt="" class="mb-6">
                 <h4 class="eb-garamond-font text-2xl font-extrabold text-white mb-1.5">Awlad Hossain</h4>
                 <p class="poppins-font text-[16px] font-normal leading-6 text-white mb-8">UIX Designer</p>
@@ -260,10 +260,10 @@
                 <h3 class="text-white eb-garamond-font text-2xl font-extrabold">Useful Link</h3>
                 <ul class="poppins-font text-[16px] font-normal leading-6 text-[#CFCFCF] mb-4">
                     <li class="mb-4"><a href="" class="">Homes</a></li>
-                    <li class="mb-4"><a href="" class=""></a>About Us</li>
-                    <li class="mb-4"><a href="" class=""></a>Cases</li>
-                    <li class="mb-4"><a href="" class=""></a>Blog</li>
-                    <li class="mb-4"><a href="" class=""></a>Contact Us</li>
+                    <li class="mb-4"><a href="" class="">About Us</a></li>
+                    <li class="mb-4"><a href="" class="">Cases</a></li>
+                    <li class="mb-4"><a href="" class="">Blog</a></li>
+                    <li class="mb-4"><a href="" class="">Contact Us</a></li>
                 </ul>
             </div>
 
