--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
 
         <!-- banner section -->
-        <div class="banner max-w-[1170px] bg-[url(./images/banner.png)] mx-auto rounded-lg">
+        <div class="banner max-w-[1170px] bg-[url(/images/banner.png)] mx-auto rounded-lg">
             <div class="banner-content max-w-[692px] mx-auto pt-24 pb-24 text-center mb-4">
                 <h3 class="text-7xl text-white h-4/5 mb-6 eb-garamond-font">We Provide Effective Legal Solutions</h3>
                 <p class="mb-8 text-center poppins-font leading-6 text-[#E7E7E7]">There are many variations of passages
@@ -116,7 +116,7 @@
             </div>
             <!-- Client Banner -->
             <div
-                class="bg-[url(./images/banner.png)] bg-[#111111CC] px-32 py-24 flex flex-col justify-center items-center rounded-l-lg">
+                class="bg-[url(/images/banner.png)] bg-[#111111CC] px-32 py-24 flex flex-col justify-center items-center rounded-l-lg">
                 <img src="./images/Ellipse 1.svg" alt="" class="mb-6">
                 <h4 class="eb-garamond-font text-2xl font-extrabold text-white mb-1.5">Awlad Hossain</h4>
                 <p class="poppins-font text-[16px] font-normal leading-6 text-white mb-8">UIX Designer</p>
