--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <!-- legal practice card -->
         <div class="card-container grid grid-cols-3 mx-auto max-w-[1170px] gap-0 mb-32">
             <div
-                class="card px-16 py-14 border-r-2 border-b-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8">
+                class="card px-16 py-14 border-r-2 border-b-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8 hover:bg-linear-to-b from-[#F3F3F3] to-[#F3F3F300]">
                 <img src="images/business.png" alt="" class="">
                 <h4 class="text-3xl">Business Law</h4>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
@@ -66,7 +66,7 @@
                 <img src="images/Frame.png" alt="">
             </div>
             <div
-                class="card px-16 py-14 border-r-2 border-b-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8">
+                class="card px-16 py-14 border-r-2 border-b-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8 hover:bg-linear-to-b from-[#F3F3F3] to-[#F3F3F300]">
                 <img src="images/criminal.png" alt="">
                 <h4 class="text-3xl">Criminal Law</h4>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
@@ -74,7 +74,7 @@
                 <img src="images/Frame.png" alt="">
             </div>
             <div
-                class="card px-16 py-14 border-b-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8">
+                class="card px-16 py-14 border-b-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8 hover:bg-linear-to-b from-[#F3F3F3] to-[#F3F3F300]">
                 <img src="images/child.png" alt="">
                 <h4 class="text-3xl">Child Law</h4>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
@@ -82,7 +82,7 @@
                 <img src="images/Frame.png" alt="">
             </div>
             <div
-                class="card px-16 py-14 border-r-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8">
+                class="card px-16 py-14 border-r-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8 hover:bg-linear-to-b from-[#F3F3F3] to-[#F3F3F300]">
                 <img src="images/education.png" alt="">
                 <h4 class="text-3xl">Education Law</h4>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
@@ -90,14 +90,14 @@
                 <img src="images/Frame.png" alt="">
             </div>
             <div
-                class="card px-16 py-14 border-r-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8">
+                class="card px-16 py-14 border-r-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8 hover:bg-linear-to-b from-[#F3F3F3] to-[#F3F3F300]">
                 <img src="images/divorce.png" alt="">
                 <h4 class="text-3xl">Divorce Law</h4>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour.</p>
                 <img src="images/Frame.png" alt="">
             </div>
-            <div class="card px-16 py-14 flex flex-col justify-center items-center text-center gap-8">
+            <div class="card px-16 py-14 flex flex-col justify-center items-center text-center gap-8 hover:bg-linear-to-b from-[#F3F3F3] to-[#F3F3F300]">
                 <img src="images/tax.png" alt="">
                 <h4 class="text-3xl">Tax Law</h4>
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
