fixed font style

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <!-- legal practice section -->
         <div class="max-w-[714px] mx-auto mb-16">
             <h3 class="text-[40px] text-center mb-3 eb-garamond-font">The Legal Practice Area</h3>
-            <p class="text-center mb-3">There are many variations of passages of Lorem Ipsum available, but the majority
+            <p class="text-[#707070] poppins-font text-[16px] font-normal leading-6 text-center mb-3">There are many variations of passages of Lorem Ipsum available, but the majority
                 have suffered alteration in some form, by injected humour.</p>
         </div>
 
@@ -60,47 +60,47 @@
             <div
                 class="card px-16 py-14 border-r-2 border-b-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8 hover:bg-linear-to-b from-[#F3F3F3] to-[#F3F3F300]">
                 <img src="images/business.png" alt="" class="">
-                <h4 class="text-3xl">Business Law</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                <h4 class="eb-garamond-font text-center text-4xl font-extrabold">Business Law</h4>
+                <p class="text-[#707070] poppins-font text-[16px] font-normal leading-6 text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour.</p>
                 <img src="images/Frame.png" alt="">
             </div>
             <div
                 class="card px-16 py-14 border-r-2 border-b-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8 hover:bg-linear-to-b from-[#F3F3F3] to-[#F3F3F300]">
                 <img src="images/criminal.png" alt="">
-                <h4 class="text-3xl">Criminal Law</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                <h4 class="eb-garamond-font text-center text-4xl font-extrabold">Criminal Law</h4>
+                <p class="text-[#707070] poppins-font text-[16px] font-normal leading-6 text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour.</p>
                 <img src="images/Frame.png" alt="">
             </div>
             <div
                 class="card px-16 py-14 border-b-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8 hover:bg-linear-to-b from-[#F3F3F3] to-[#F3F3F300]">
                 <img src="images/child.png" alt="">
-                <h4 class="text-3xl">Child Law</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                <h4 class="eb-garamond-font text-center text-4xl font-extrabold">Child Law</h4>
+                <p class="text-[#707070] poppins-font text-[16px] font-normal leading-6 text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour.</p>
                 <img src="images/Frame.png" alt="">
             </div>
             <div
                 class="card px-16 py-14 border-r-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8 hover:bg-linear-to-b from-[#F3F3F3] to-[#F3F3F300]">
                 <img src="images/education.png" alt="">
-                <h4 class="text-3xl">Education Law</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                <h4 class="eb-garamond-font text-center text-4xl font-extrabold">Education Law</h4>
+                <p class="text-[#707070] poppins-font text-[16px] font-normal leading-6 text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour.</p>
                 <img src="images/Frame.png" alt="">
             </div>
             <div
                 class="card px-16 py-14 border-r-2 border-[#E7E7E7] flex flex-col justify-center items-center text-center gap-8 hover:bg-linear-to-b from-[#F3F3F3] to-[#F3F3F300]">
                 <img src="images/divorce.png" alt="">
-                <h4 class="text-3xl">Divorce Law</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                <h4 class="eb-garamond-font text-center text-4xl font-extrabold">Divorce Law</h4>
+                <p class="text-[#707070] poppins-font text-[16px] font-normal leading-6 text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour.</p>
                 <img src="images/Frame.png" alt="">
             </div>
             <div class="card px-16 py-14 flex flex-col justify-center items-center text-center gap-8 hover:bg-linear-to-b from-[#F3F3F3] to-[#F3F3F300]">
                 <img src="images/tax.png" alt="">
-                <h4 class="text-3xl">Tax Law</h4>
-                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                <h4 class="eb-garamond-font text-center text-4xl font-extrabold">Tax Law</h4>
+                <p class="text-[#707070] poppins-font text-[16px] font-normal leading-6 text-center">There are many variations of passages of Lorem Ipsum available, but the majority have suffered
                     alteration in some form, by injected humour.</p>
                 <img src="images/Frame.png" alt="">
             </div>
