try to fixed banner image

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
 
         <!-- banner section -->
-        <div class="banner max-w-[1170px] bg-[url(/images/banner.png)] mx-auto rounded-lg">
+        <div class="banner max-w-[1170px] bg-[url('./images/banner.png')] mx-auto rounded-lg">
             <div class="banner-content max-w-[692px] mx-auto pt-24 pb-24 text-center mb-4">
                 <h3 class="text-7xl text-white h-4/5 mb-6 eb-garamond-font">We Provide Effective Legal Solutions</h3>
                 <p class="mb-8 text-center poppins-font leading-6 text-[#E7E7E7]">There are many variations of passages
