fixed client banner image

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             </div>
             <!-- Client Banner -->
             <div
-                class="bg-[url(/images/banner.png)] bg-[#111111CC] px-32 py-24 flex flex-col justify-center items-center rounded-l-lg">
+                class="bg-[url('./images/banner.png')] px-32 py-24 flex flex-col justify-center items-center rounded-l-lg">
                 <img src="./images/Ellipse 1.svg" alt="" class="mb-6">
                 <h4 class="eb-garamond-font text-2xl font-extrabold text-white mb-1.5">Awlad Hossain</h4>
                 <p class="poppins-font text-[16px] font-normal leading-6 text-white mb-8">UIX Designer</p>
